<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nectroid</string>

    <!-- UI strings -->
    <string name="requested_by">Requested by</string>
    <string name="time_left">Time Left:</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="queue">Queue</string>
    <string name="login">Log in</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="favorites_failed">Favorites update failed</string>
    <string name="playlist_failed">Playlist update failed</string>
    <string name="oneliner_failed">OneLiner update failed</string>
    <string name="select_stream">Select a stream</string>
    <string name="invalid_stream">Invalid stream URL</string>
    <string name="pick_stream">Pick a stream</string>
    <string name="streams_failed">Streams update failed</string>
    <string name="nectroid_streaming">Nectroid stream</string>
    <string name="player_error">Error playing stream</string>
    <string name="queue_empty">Queue is empty! Hurry! :-o</string>
    <string name="nofavs">No favorites! :(</string>
    <string name="history_empty">History is empty</string>
    <string name="no_streams">No streams available</string>
    <string name="loading_streams">Loading streams...</string>
    <string name="about_nectroid">About Nectroid</string>

    <!-- Settings strings -->
    <string name="select_a_stream">Select a stream</string>
    <string name="select_a_site">Select a site</string>
    <string name="use_scrobbler">Use Audioscrobbler</string>
    <string name="requires_lastfm">Requires the Last.fm app</string>
    <string name="use_sw_decoder">Software MP3 player</string>
    <string name="sw_decoder_summary">Only enable if normal player is broken</string>
    <string name="oneliner_refresh_time">OneLiner refresh time</string>
    <string name="every_30_seconds">Every 30 seconds</string>
    <string name="every_1_minute">Every 1 minute</string>
    <string name="every_2_minutes">Every 2 minutes</string>
    <string name="every_5_minutes">Every 5 minutes</string>
    <string name="manual_refresh_only">Manual refresh only</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_site">New site</string>
    <string name="edit_site">Edit site</string>
    <string name="site_name">Site Name</string>
    <string name="site">Site</string>
    <string name="base_url">Base URL</string>
    <string name="base_url_info">Base URL, ex: http://example.com/</string>
    <string name="url">URL</string>
    <string name="color">Color</string>
    <string name="color_info">Color in HTML format, ex: #88AACC</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_delete_last_site">You cannot delete the last site.</string>
    <string name="confirm_delete">Delete %s?</string>

    <!-- URL format strings -->
    <string name="url_fmt_song">demovibes/song/%s/</string>
    <string name="url_fmt_artist">demovibes/artist/%s/</string>
    <string name="url_fmt_user">demovibes/user/%s/</string>

    <!-- Document URLs -->
    <string name="url_queue">demovibes/xml/queue/</string>
    <string name="url_favorites">demovibes/xml/user/USER/favorites/</string>
    <string name="url_streams">demovibes/xml/streams/</string>
    <string name="url_oneliner">demovibes/xml/oneliner/</string>
    <string name="url_login">account/signin/</string>
    <string name="url_logout">accounts/logout/</string>
    <string name="url_whatyousay">demovibes/ajax/oneliner_submit/</string>
    <string name="url_song_queue">demovibes/song/queue/</string>
    <string name="url_song">demovibes/xml/song/</string>

    <!-- POST parameters-->
    <string name="parameter_songid">songid</string>
    <string name="parameter_line">Line</string>
    <string name="parameter_username">username</string>
    <string name="parameter_password">password</string>

    <!-- Document cache filenames -->
    <string name="filename_queue">queue.xml</string>
    <string name="filename_streams">streams.xml</string>
    <string name="filename_oneliner">oneliner.xml</string>
    <string name="filename_favorites">favorites.xml</string>

    <!-- Stream types -->
    <string name="stream_type_unknown">UNKNOWN</string>
    <string name="stream_type_mp3">MP3</string>
    <string name="stream_type_ogg">Ogg</string>
    <string name="stream_type_aac">AAC</string>
    <string name="stream_type_shoutcast">SHOUTcast</string>
</resources>
